# service/src/main/java/br/com/sw2you/realmeet/validator/RoomValidator.java
@@ -2,9 +2,12 @@ package br.com.sw2you.realmeet.validator;
 
 import static br.com.sw2you.realmeet.validator.ValidatorConstants.*;
 import static br.com.sw2you.realmeet.validator.ValidatorUtils.*;
+import static java.util.Objects.isNull;
 
 import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
+import br.com.sw2you.realmeet.api.model.UpdateRoomDTO;
 import br.com.sw2you.realmeet.repository.RoomRepository;
+import java.util.Objects;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -26,7 +29,22 @@ public class RoomValidator {
             validateName(createRoomDTO.getName(), validationErrors) &&
             validateSeats(createRoomDTO.getSeats(), validationErrors)
         ){
-            validateNameDuplicate(createRoomDTO.getName(), validationErrors);
+            validateNameDuplicate(null, createRoomDTO.getName(), validationErrors);
+        }
+
+        throwOnError(validationErrors);
+    }
+
+    public void validate(Long roomId, UpdateRoomDTO updateRoomDTO){
+
+        var validationErrors = new ValidationErrors();
+
+        if(
+           validateRequired(roomId, ROOM_ID, validationErrors) &&
+           validateName(updateRoomDTO.getName(), validationErrors) &&
+           validateSeats(updateRoomDTO.getSeats(), validationErrors)
+        ){
+            validateNameDuplicate(roomId, updateRoomDTO.getName(), validationErrors);
         }
 
         throwOnError(validationErrors);
@@ -47,9 +65,13 @@ public class RoomValidator {
         );
     }
 
-    public void validateNameDuplicate(String name, ValidationErrors validationErrors){
+    public void validateNameDuplicate(Long roomIdToExclude, String name, ValidationErrors validationErrors){
         roomRepository
             .findByNameAndActive(name, true)
-            .ifPresent(__ -> validationErrors.add(ROOM_NAME, ROOM_NAME + DUPLICATE));
+            .ifPresent(room -> {
+                if (!isNull(roomIdToExclude) && !Objects.equals(room.getId(), roomIdToExclude)) {
+                    validationErrors.add(ROOM_NAME, ROOM_NAME + DUPLICATE);
+                }
+            });
     }
 }
